syntax = "proto3";

package pb;
import "google/protobuf/timestamp.proto";
option go_package = "./pkg/pb";

message CreateUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string fullname = 4;
    string role = 5;
}

message CreateUserResponse {
    User user = 1;
}

message GetLoginRequest {
    string username = 1;
    string password = 2;
}

message GetLoginResponse {
    int32 id = 1;
    string username = 2;
    string token = 3;
    string password = 4;
}

message User {
    int32 ID = 1;
    string username = 2;
    string email = 3;
    string password = 4;
    string fullname = 5;
    string role = 6;
    google.protobuf.Timestamp created_at = 7;
}

message GetUserIdRequest {
    int32 id = 1;
}